package es.etg.daw.dawes.java.rest.restfull.alumnos.domain.model;

import es.etg.daw.dawes.java.rest.restfull.common.domain.model.Identificador;

public class AlumnoId extends Identificador {
    
    public AlumnoId(Integer value) {
        super(value);
    }
}