package es.etg.daw.dawes.java.rest.restfull.alumnos.domain.model;

import es.etg.daw.dawes.java.rest.restfull.common.domain.model.Identificador;

public class ProfesorId extends Identificador {
    
    public ProfesorId(Integer value) {
        super(value);
    }
}